# streamflow-analytics

./: .agent.code-workspace  .gitignore  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.claude/: CLAUDE.md  COMMANDS_REFERENCE.md  GUIA-COMPLETO.md  README.md  SETUP.md  settings.json
.claude/agents/code-quality/: code-simplifier.md
.claude/agents/domain/: _README.md  diagram-generator-agent.md
.claude/commands/core/: setup-project.md
.claude/commands/workflow/: generate-diagrams.md
.claude/dev/examples/: readme.md
.claude/kb/: _README.md  _index.yaml
.claude/kb/diagram-generation/: DIAGRAMS_STYLE_GUIDE.md  creative-style-guide.md  excalidraw-format.md  icon-library.md  layout-patterns.md  style-guide.md  v3-logo-flow-style.md
.claude/notes/: 01-meeting-notes.md  02-meeting-notes.md  03-meeting-notes.md
.claude/sdd/examples/: readme.md
.claude/sdd/features/: BRAINSTORM_E2E_PRODUCTION.md  BRAINSTORM_STAFF_UPGRADE.md  BRAINSTORM_STREAMFLOW_ANALYTICS.md  DEFINE_E2E_PRODUCTION.md  (+3 more)
.claude/skills/: _README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  deploy.yaml
archive/: README.md
config/: default.yaml  dev.yaml  fraud_rules.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/tests/: assert_freshness.sql  assert_positive_amounts.sql
design/: README.md
docker/airflow/: Dockerfile
docker/flink/: Dockerfile
docker/generator/: Dockerfile
docs/: FRAUD_DETECTION.md  RUNBOOK.md  SETUP_GUIDE.md
docs/adr/: 001-pyflink-over-java-flink.md  002-isolation-forest-for-anomaly-detection.md  003-dead-letter-queue-pattern.md  004-dbt-over-raw-sql.md  005-cosmos-airflow-integration.md  006-pyflink-docker-no-jar.md
functions/: README.md
infra/: README.md
infra/environments/: terragrunt.hcl
k8s/: kustomization.yaml
k8s/argocd/: application.yaml
k8s/flink/: fraud-detector.yaml  realtime-aggregator.yaml  transaction-processor.yaml
k8s/generator/: deployment.yaml
k8s/kafka/: kafka-topics.yaml
k8s/monitoring/: alerting-rules.yaml  service-monitors.yaml  slo-rules.yaml
k8s/security/: network-policies.yaml  pod-disruption-budgets.yaml  rbac.yaml
notes/: summary-requirements.md
scripts/: build_images.sh  demo.sh  deploy.sh  generate_events.py  import_images.sh  run_migrations.py  seed_data.py  setup.sh  setup_k3s.sh  train_model.py  verify_pipeline.py
sql/migrations/: 001_create_bronze_schema.sql  002_create_silver_schema.sql  003_create_gold_schema.sql  004_create_indexes.sql
sql/quality/: check_amounts.sql  check_duplicates.sql  check_freshness.sql  check_null_rate.sql  quality_checks.sql
sql/transforms/: bronze_to_silver.sql  silver_to_gold.sql  update_customer_stats.sql
src/: README.md  __init__.py
src/dags/: bronze_to_silver.py  data_quality.py  dbt_marts.py  dbt_quality.py  dbt_staging.py  maintenance.py  silver_to_gold.py
src/flink_jobs/: __init__.py  fraud_detector.py  fraud_detector_function.py  fraud_pipeline.py  transaction_processor.py
src/generators/: __init__.py  customer_generator.py  fraud_patterns.py  kafka_producer.py  store_generator.py  transaction_generator.py
src/models/: __init__.py  customer.py  fraud_alert.py  store.py  transaction.py
src/tests/: conftest.py
src/utils/: __init__.py  config.py  db.py  logging.py  metrics.py
tests/: README.md  conftest.py
tests/contract/: test_dlq_schema.py  test_fraud_alert_schema.py  test_state_compat.py  test_transaction_schema.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_full_pipeline.py  test_ml_pipeline.py
tests/unit/: test_chaos.py  test_config.py  test_dbt_dags.py  test_dlq.py  test_feature_engineering.py  test_fraud_detector.py  test_fraud_detector_function.py  test_fraud_rule_evaluator.py  test_generators.py  test_metrics.py  test_model_scorer.py  test_models.py  test_serialization.py  test_state_serialization.py
(+73 files in other folders)
